--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mainBackgroundColor"
     android:focusable="false"
+    android:layoutDirection="ltr"
     tools:context=".MainActivity">
 
     <EditText
@@ -17,6 +19,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:inputType="numberSigned|numberDecimal"
+        android:textColor="@color/answerTextColor"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:textColor="@color/answerTextColor"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/button7"
@@ -41,6 +45,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="numberSigned|numberDecimal"
+        android:textColor="@color/answerTextColor"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,8 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="0"
+        android:text="@string/_0"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
         app:layout_constraintEnd_toStartOf="@+id/buttonDot" />
 
@@ -59,8 +66,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="1"
+        android:text="@string/_1"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/button2" />
 
@@ -68,8 +77,10 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="2"
+        android:text="@string/_2"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="@+id/button5" />
 
@@ -78,8 +89,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="3"
+        android:text="@string/_3"
+        android:textColor="@color/textColor"
         app:layout_constraintStart_toStartOf="@+id/button6"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
@@ -88,8 +101,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="4"
+        android:text="@string/_4"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/button5" />
 
@@ -97,8 +112,10 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="5"
+        android:text="@string/_5"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="@+id/button8" />
 
@@ -107,8 +124,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="6"
+        android:text="@string/_6"
+        android:textColor="@color/textColor"
         app:layout_constraintStart_toStartOf="@+id/button9"
         app:layout_constraintTop_toBottomOf="@+id/button9" />
 
@@ -117,8 +136,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="7"
+        android:text="@string/_7"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button8"
         app:layout_constraintEnd_toStartOf="@+id/button8" />
 
@@ -127,8 +148,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="8"
+        android:text="@string/_8"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button9"
         app:layout_constraintEnd_toStartOf="@+id/button9" />
 
@@ -139,8 +162,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="9"
+        android:text="@string/_9"
+        android:textColor="@color/textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result" />
@@ -150,8 +175,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="/"
+        android:text="@string/_divide"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button9"
         app:layout_constraintStart_toEndOf="@+id/button9" />
 
@@ -159,20 +186,24 @@
         android:id="@+id/buttonNeg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="NEG"
-        android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDivide"
-        app:layout_constraintStart_toEndOf="@+id/buttonDivide" />
+        android:text="@string/_neg"
+        android:textColor="@color/textColor"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/buttonMultiply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="*"
+        android:text="@string/_multiply"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button6"
         app:layout_constraintStart_toEndOf="@+id/button6" />
 
@@ -181,8 +212,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="-"
+        android:text="@string/_minus"
+        android:textColor="@color/textColor"
         app:layout_constraintBaseline_toBaselineOf="@+id/button3"
         app:layout_constraintStart_toEndOf="@+id/button3" />
 
@@ -190,30 +223,38 @@
         android:id="@+id/buttonPlus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="+"
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
-        app:layout_constraintStart_toEndOf="@+id/buttonEquals" />
+        android:text="@string/_plus"
+        android:textColor="@color/textColor"
+        app:layout_constraintStart_toEndOf="@+id/buttonNeg"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />
 
     <Button
         android:id="@+id/buttonEquals"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="53dp"
+        android:layout_height="158dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="="
-        app:layout_constraintStart_toStartOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        android:text="@string/_equals"
+        android:textColor="@color/textColor"
+        app:layout_constraintStart_toStartOf="@+id/buttonAC"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAC" />
 
     <Button
         android:id="@+id/buttonDot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/backgroundColor"
         android:minWidth="48dp"
-        android:text="."
-        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
-        app:layout_constraintEnd_toEndOf="@+id/button2" />
+        android:text="@string/_dot"
+        android:textColor="@color/textColor"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -221,5 +262,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <Button
+        android:id="@+id/buttonAC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@color/backgroundColor"
+        android:minWidth="48dp"
+        android:text="@string/_ac"
+        android:textColor="@color/textColor"
+        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDivide"
+        app:layout_constraintStart_toEndOf="@+id/buttonDivide" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
